# awaria-outage-notifier

./: .gitignore  GEMINI.md  PRIVACY_POLICY.md  README.md  README.pl.md  bump_version.rs  package-lock.json  package.json  release.rs
.github/workflows/: codeql.yml  release.yml
metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
metadata/android/pl-PL/: full_description.txt  short_description.txt  title.txt
public/: i18n.js  index.html  script.js  style.css
scripts/: bump-version.mjs  load-teryt.mjs
src-tauri/: 2  Cargo.toml  check_output.txt  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: cities.sql  notification.af  streets.sql
src-tauri/capabilities/: default.json  psg.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_logic.rs  cache.rs  enea.rs  energa.rs  fortum.rs  lib.rs  mpwik.rs  network_state.rs  pge.rs  psg.rs  state_db.rs  stoen.rs  tauron.rs  teryt.rs  test_regex.rs  utils.rs
tests/: frontend.test.js
