[package]
name = "app"
version = "1.0.11-beta"
description = "AWARIA"
authors = ["eremef.xyz"]
license = ""
repository = "https://github.com/eremef/awaria-outage-notifier"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.6.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "native-tls"] }
chrono = "0.4.43"
tokio = { version = "1.49.0", features = ["full"] }
