[package]
name = "app"
version = "1.0.45"
description = "AWARIA"
authors = ["eremef.xyz"]
license = ""
repository = "https://github.com/eremef/awaria-outage-notifier"
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies"] }
chrono = "0.4.43"
tokio = { version = "1.52.0", features = ["full"] }
dirs = "5.0"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-fs = "2.4.5"
quick-xml = { version = "0.39.2", features = ["serialize"] }
futures = "0.3.32"
tauri-plugin-notification = "2.2.1"
sha2 = "0.10.8"
chrono-tz = "0.10.4"
tauri-plugin-opener = "2"
async-trait = "0.1.89"
rustls-platform-verifier = "0.6.2"
jni = "0.21"
scraper = "0.26.0"
android_logger = "0.15"

[dev-dependencies]
mockito = "1.5.0"
mockall = "0.13.1"